[package]
name = "call-orca"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "=0.29.0"
solana-sdk = "<1.17.0"
solana-client = "<1.17.0"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"]}
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"]}

anyhow = "1.0.53"
arrayref = "0.3.9"
bincode = { version = "1.3.3" }
bytemuck = { version = "1.19.0", features = ["derive", "min_const_generics"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"

whirlpool-cpi-sample = { path = "/home/ubuntu/whirlpool/whirlpool-cpi-sample" }
whirlpool-cpi = { path = "/home/ubuntu/whirlpool/whirlpool-cpi" }
orca_whirlpools_core = { path = "/home/ubuntu/whirlpools/rust-sdk/core" }

raydium-library = { path = "/home/ubuntu/raydium-library/libraries" }
raydium_amm = { git = "https://github.com/raydium-io/raydium-amm", default-features = false, features = ["client", "no-entrypoint"] }
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", features = ["client", "no-entrypoint"] }

meteora-dlmm-sdk = { path = "/home/ubuntu/dlmm-sdk/commons", package = "commons" }
meteora-dlmm = { path = "/home/ubuntu/dlmm-sdk/programs/lb_clmm", package = "lb_clmm", features = ["no-entrypoint"] }

